--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <body class="font-jakarta">
     <!-- HEADER START -->
     <div class="text-center text-white relative bg-cover bg-center print:hidden"
-        style="background-image: url(/src/img/mosq-vector.jpg);">
+        style="background-image: url(/src/img/mosq-vector.png);">
         <div class="bg-primary/90 py-0 md:py-4 md:pb-36">
             <div class="font-bold pt-4">
                 <h1 class="text-2xl">Jadwal Sholat</h1>
@@ -82,8 +82,7 @@
                                 title="Ganti Tema"><i class="fa-solid fa-sun"></i>
                             </button>
                             <button id="btn-to-light" class="border border-gray-500 px-2 py-1 mr-4 rounded-lg"
-                                title="Ganti Tema">
-                                <i class="fa-solid fa-moon"></i>
+                                title="Ganti Tema"><i class="fa-solid fa-print"></i>
                             </button>
                         </div>
                         <div class="flex gap-2">
