--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
     <title>Document</title>
 </head>
 
-<body class="font-jakarta">
+<body class="font-futura border-spacing-2">
     <!-- HEADER START -->
     <div class="text-center text-white relative bg-cover bg-center print:hidden"
-        style="background-image: url(/src/img/mosq-vector.png);">
+        style="background-image: url(/src/img/mosq-vector.jpg);">
         <div class="bg-primary/90 py-0 md:py-4 md:pb-36">
             <div class="font-bold pt-4">
                 <h1 class="text-2xl">Jadwal Sholat</h1>
