--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,19 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="2style.css">
     <script src="https://kit.fontawesome.com/dd0cf0a7f4.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
     <title>Document</title>
 </head>
 
-<body class="font-futura border-spacing-2">
+<body class="font-jakarta">
     <!-- HEADER START -->
     <div class="text-center text-white relative bg-cover bg-center print:hidden"
         style="background-image: url(/src/img/mosq-vector.jpg);">
         <div class="bg-primary/90 py-0 md:py-4 md:pb-36">
             <div class="font-bold pt-4">
                 <h1 class="text-2xl">Jadwal Sholat</h1>
-                <h1 class="text-3xl">$(CITY)</h1>
+                <h1 class="text-3xl"><span id="city">$(CITY)</span></h1>
                 <h1 class="text-xl">$(DATE)</h1>
                 <label class="inline-flex items-center cursor-pointer mt-4">
                     <input type="checkbox" id="toggle-daily" class="sr-only peer">
@@ -51,10 +52,10 @@
             <div
                 class="border border-gray-200 shadow rounded-lg mx-auto lg:mx-0 max-w-3xl bg-white md:px-3 py-4 relative dark:bg-dark-secondary dark:border-gray-500 print:break-after-page">
                 <h1 class="text-center font-bold text-xl md:text-2xl text-gray-700 mx-2 dark:text-black">
-                    Jadwal Sholat Untuk $(KOTA), $(GMT)
+                    Jadwal Sholat Untuk <span id="city">$(KOTA)</span>, $(GMT)
                 </h1>
                 <h2 class="text-center font-bold text-[13pt] md:text-xl text-primary">
-                    $(Month - Year)
+                    <span id="month-year">$(Month - Year)</span>
                 </h2>
                 <h5 class="text-center mb-5 font-bold text-[7pt] md:text-[.69rem] text-slate-600 print:mb-0">
                     $(hijri)
@@ -64,13 +65,23 @@
                     <p class="text-base font-medium m-0 md:text-[1.1rem] dark:text-dark">
                         <i class="fa-solid fa-location-dot"></i>
                         Pilih Kab/Kota untuk Ditampilkan
+                        <br>
                         <span class="select2_praytime text-primary font-bold">
-                            <select name="" id="" class="town-select select2-hidden-accessible"
-                                data-select2-id="select2-data-1-vf99" tabindex="-1" aria-hidden="true">
-                                <option value="1">$(API KOTA)</option>
-                                <option value="1">$(API KOTA)</option>
+                            <select name="" id="pilihProvinsi" onchange="dropdownKota()"
+                                class="text-center town-select select2-hidden-accessible" tabindex="-1"
+                                aria-hidden="true">
+                                <option value="1">--Pilih Provinsi--</option>
+                            </select>
+                            <br>
+                            <span class="content-center select2_praytime text-primary font-bold">
+                                <select name="" id="pilihKota" onchange="jamSholat()" class="text-center town-select select2-hidden-accessible"
+                                    tabindex="0" aria-hidden="true">
+                                    <option value="1">--Pilih Kota-- </option>
+                                </select>
+                            </span>
+                        </span>
+
                     </p>
-                    </select>
                 </div>
                 <!-- END OF KABUPATEN KOTA SELECTOR -->
 
@@ -85,23 +96,14 @@
                                 title="Ganti Tema"><i class="fa-solid fa-print"></i>
                             </button>
                         </div>
-                        <div class="flex gap-2">
-                            <select name="m" id="month-select" class="date-select">
-                                <option value="1">$(Month)</option>
-                            </select>
-                            <select name="y" id="year-select" class="date-select">
-                                <option value="2019">$(Year)</option>
-                            </select>
-                        </div>
                     </div>
                 </div>
-
                 <!-- END OF DARK MODE - PRINT - MONTH SELECTOR -->
 
                 <!-- TABLE START -->
-                <div class="overflow-x-auto dark:text-slate-300">
+                <div class="overflow-x-auto ">
                     <table class="schedule-table mx-auto mt-4 text-sm rounded-lg overflow-hidden print:mt-0">
-                        <thead class="bg-primary text-white">
+                        <thead class="data-sholat bg-primary text-white">
                             <tr>
                                 <th class="rounded-bl-lg">Tanggal</th>
                                 <th class="hidden print:block">Hijriyah</th>
@@ -114,26 +116,19 @@
                                 <th class>Isya'</th>
                             </tr>
                         </thead>
-                        <tbody class="text-center font-medium">
-                            <th>yok</th>
-                            <th>bisa</th>
-                            <th>yok</th>
-                        </tbody>
-                        <tbody class="text-center font-medium">
-                            <th>yok</th>
-                            <th>bisa</th>
-                            <th>yok</th>
-                        </tbody>
-                        <tbody class="text-center font-medium">
-                            <th>yok</th>
-                            <th>bisa</th>
-                            <th>yok</th>
-                        </tbody>
-                        <tbody class="text-center font-medium">
-                            <th>yok</th>
-                            <th>bisa</th>
-                            <th>yok</th>
-                        </tbody>
+                        <tbtbody class="text-center font-jakarta-sans font-medium">
+                            <tr class="data_sholat table-row-striped text-center">
+                                <td>01 <small class="hijri-date-text">21 Sya'ban</small></td>
+                                <td class="hidden print:block">21 Sya'ban 1445</td>
+                                <td>04:08</td>
+                                <td>04:18</td>
+                                <td>05:32</td>
+                                <td>11:43</td>
+                                <td>14:46</td>
+                                <td>17:51</td>
+                                <td>19:01</td>
+                            </tr>
+
                     </table>
                 </div>
             </div>
@@ -162,7 +157,7 @@
                 <div
                     class="border border-gray-200 shadow rounded-lg mx-auto lg:mx-0 max-w-3xl bg-white md:px-3 py-4 relative dark:bg-dark-secondary dark:border-gray-500 print:break-after-page">
                     <h1 class="text-center font-bold text-xl md:text-2xl text-gray-700 mx-2">
-                        Kiblat - Nek Gak Ayat Quran 
+                        Kiblat - Nek Gak Ayat Quran
                     </h1>
                     <h2 class="text-center font-bold text-[13pt] md:text-xl">
                         ------
@@ -182,8 +177,8 @@
 
     <footer
         class="text-center bg-secondary text-white py-2 px-2 font-medium text-sm md:text-base dark:text-slate-300 print:hidden">
-        <p>2024 © Made with love by collaboration <a href="intersoft"
-                class="text-yellow-200 font-bold">Dhiki Teguh</a> x <a href="intersoft"
+        <p>2024 © Made with love by collaboration <a href="https://www.linkedin.com/in/dhikiteguh/"
+                class="text-yellow-200 font-bold">Dhiki Teguh</a> x <a href="https://www.linkedin.com/in/kechenk/"
                 class="text-yellow-200 font-bold">Reza D. Pradipta</a>
     </footer>
 
