making data populate when change the city

--- a/public/test.html
+++ b/public/test.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/dd0cf0a7f4.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 
-    <title>INDEX</title>
+    <title>TEST</title>
 </head>
 
 <body class="font-jakarta">
@@ -102,24 +102,25 @@
 
                 <!-- TABLE START -->
                 <div class="overflow-x-auto ">
-                    <table class="schedule-table mt-4 text-sm rounded-lg overflow-hidden print:mt-0" cellspacing="0" cellpadding="2" align="center">
-                        <thead class="text-center bg-primary text-white">
+                    <table class="schedule-table mx-auto mt-4 text-sm rounded-lg overflow-hidden print:mt-0">
+                        <thead class="bg-primary text-white">
                             <tr>
-                                <td><b>Tanggal</b></td>
-                                <td><b>Imsak</b></td>
-                                <td><b>Subuh</b></td>
-                                <td><b>Terbit</b></td>
-                                <td><b>Dhuhur</b></td>
-                                <td><b>Ashar</b></td>
-                                <td><b>Maghrib</b></td>
-                                <td><b>Isya</b></td>
+                                <th class="rounded-bl-lg">Tanggal</th>
+                                <th class="hidden print:block">Hijriyah</th>
+                                <th class>Imsak</th>
+                                <th class>Subuh</th>
+                                <th class>Terbit</th>
+                                <th class>Dhuhur</th>
+                                <th class>Ashar</th>
+                                <th class>Maghrib</th>
+                                <th class>Isya'</th>
                             </tr>
                         </thead>
+                        <tbtbody class="data_sholat1 text-center font-jakarta-sans font-medium">
+                            <tr class="data_sholat table_dark table_light
+                            table_highlight table_header" align="center">
+                            </tr>
 
-                        <tbody class="data_sholat1 text-center font-jakarta">
-                            <tr class="data_sholat table_dark table_light table_highlight
-                            table_header" align="center"></tr>
-                        </tbody>
                     </table>
                 </div>
             </div>
