--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <body class="font-jakarta">
     <!-- HEADER START -->
     <div class="text-center text-white relative bg-cover bg-center print:hidden"
-        style="background-image: url(/src/img/mosq-vector.jpg);">
+        style="background-image: url(../src/img/masjid.jpg);">
         <div class="py-0 md:py-4 md:pb-36">
             <div class="font-bold pt-4">
                 <h1 class="text-2xl">Jadwal Sholat</h1>
