adding bg-primary/90 in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER START -->
     <div class="text-center text-white relative bg-cover bg-center print:hidden"
         style="background-image: url(../src/img/masjid.jpg);">
-        <div class="py-0 md:py-4 md:pb-36">
+        <div class="bg-primary/90 py-0 md:py-4 md:pb-36">
             <div class="font-bold pt-4">
                 <h1 class="text-2xl">Jadwal Sholat</h1>
                 <h1 class="text-3xl"><span id="city">$(CITY)</span></h1>
