--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="2style.css">
     <script src="https://kit.fontawesome.com/dd0cf0a7f4.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <link rel="icon" href="../src/img/mosque-solid.svg" type="image/x-icon">
 
-    <title>INDEX</title>
+    <title>Jadwal Sholat <span class="city3"></span></title>
 </head>
 
 <body class="font-jakarta">
@@ -93,7 +94,7 @@
                                 title="Ganti Tema"><i class="fa-solid fa-sun"></i>
                             </button>
                             <button id="btn-to-light" class="border border-gray-500 px-2 py-1 mr-4 rounded-lg"
-                                title="Ganti Tema"><i class="fa-solid fa-print"></i>
+                                title="Ganti Tema"><i class="fa-solid fa-print" onselect="printPage()"></i>
                             </button>
                         </div>
                     </div>
