--- a/public/test.html
+++ b/public/test.html
@@ -15,7 +15,7 @@
 <body class="font-jakarta">
     <!-- HEADER START -->
     <div class="text-center text-white relative bg-cover bg-center print:hidden"
-        style="background-image: url(/src/img/mosq-vector.jpg);">
+        style="background-image: url(../src/img/masjid.jpg);">
         <div class="bg-primary/90 py-0 md:py-4 md:pb-36">
             <div class="font-bold pt-4">
                 <h1 class="text-2xl">Jadwal Sholat</h1>
@@ -102,10 +102,10 @@
 
                 <!-- TABLE START -->
                 <div class="overflow-x-auto ">
-                    <table class="schedule-table mx-auto mt-4 text-sm rounded-lg overflow-hidden print:mt-0">
-                        <thead class="bg-primary text-white">
+                    <table class="schedule-table mt-4 text-sm rounded-lg overflow-hidden print:mt-0" cellspacing="0" cellpadding="2" align="center">
+                        <thead class="text-center bg-primary text-white">
                             <tr>
-                                <th class="rounded-bl-lg">Tanggal</th>
+                                <th class="rounded-bl-bg">Tanggal</th>
                                 <th class="hidden print:block">Hijriyah</th>
                                 <th class>Imsak</th>
                                 <th class>Subuh</th>
@@ -116,11 +116,11 @@
                                 <th class>Isya'</th>
                             </tr>
                         </thead>
-                        <tbtbody class="data_sholat1 text-center font-jakarta-sans font-medium">
+                        <tbtbody class="data_sholat1 text-center font-jakarta">
                             <tr class="data_sholat table_dark table_light
                             table_highlight table_header" align="center">
                             </tr>
-
+                        </tbtbody>
                     </table>
                 </div>
             </div>
