--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                 <h1 class="text-2xl">Jadwal Sholat</h1>
                 <h1 class="text-3xl"><span id="city"></span></h1>
                 <h1 class="text-xl"><span id="month-year"></span></h1>
-                <label class="inline-flex items-center cursor-pointer mt-4">
+                <!-- <label class="inline-flex items-center cursor-pointer mt-4">
                     <input type="checkbox" id="toggle-daily" class="sr-only peer">
                     <div class="relative w-11 h-6 bg-gray-200 peer-focus:outline-none
                     rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full
@@ -32,9 +32,9 @@
                     after:h-5 after:w-5 after:transition-all dark:border-gray-600 
                     peer-checked:bg-[#0d763f]">
                     </div>
-                    <span class="ms-3 text-sm font-semibold">
+                    <!-- <span class="ms-3 text-sm font-semibold">
                         Tampilkan Jadwal Harian
-                    </span>
+                    </span> -->
                 </label>
             </div>
         </div>
@@ -48,9 +48,12 @@
         </div>
     </div>
     <!-- HEADER END -->
+
+    <!-- BORDER START -->
     <div class="py-4 pt-7 px-2 sm:px-0 md:pt-20 dark:bg-dark-primary toggled" id="monthly_schedule">
         <div class="mx-auto lg:flex lg:justify-center lg:gap-4 lg:flex-row lg:items-start">
-            <div class="border border-gray-200 shadow rounded-lg mx-auto lg:mx-0 max-w-3xl bg-white md:px-3 py-4 relative dark:bg-dark-secondary dark:border-gray-500 print:break-after-page">
+            <div
+                class="border border-gray-200 shadow rounded-lg mx-auto lg:mx-0 max-w-3xl bg-white md:px-3 py-4 relative dark:bg-dark-secondary dark:border-gray-500 print:break-after-page">
                 <h1 class="text-center font-bold text-xl md:text-2xl text-gray-700 mx-2 dark:text-black">
                     Jadwal Sholat Untuk <span id="city1"></span>
                     <br>
@@ -60,31 +63,30 @@
                     <span id="month-year1"></span>
                 </h2>
                 <h5 class="text-center mb-5 font-bold text-[7pt] md:text-[.69rem] text-slate-600 print:mb-0">
-                    $(hijri)
+                    <span id="hijri"></span>
                 </h5>
-                <!--KABUPATEN KOTA SELECTOR-->
+                <!--KABUPATEN KOTA SELECTOR -->
                 <div class="flex justify-center items-center flex-col gap-2 pb-4 md:pb-0 xs:flex-row print:hidden">
                     <p class="text-base font-medium m-0 md:text-[1.1rem] dark:text-dark">
                         <i class="fa-solid fa-location-dot"></i>
                         Pilih Kab/Kota untuk Ditampilkan
                         <br>
-                        <span class="select2_praytime text-primary font-bold">
-                            <select name id="pilihProvinsi" onchange="dropdownKota()"
-                                class="text-center town-select select2-hidden-accessible" tabindex="-1"
-                                aria-hidden="true">
-                                <option value="1">--Pilih Provinsi--</option>
+                        <span class="text-primary font-bold">
+                            <select id="pilihProvinsi" onchange="dropdownKota()" 
+                                class="text-center flex justify-center items-center flex-col pb-3 md:pb-2 xs:flex-row print:hidden" tabindex="0" aria-hidden="true">
+                                <option value="1">COK</option>
                             </select>
-                            <br>
-                            <span class="content-center select2_praytime text-primary font-bold">
-                                <select name id="pilihKota" onchange="jamSholat()" class="text-center town-select select2-hidden-accessible"
-                                    tabindex="0" aria-hidden="true">
-                                    <option value="1">--Pilih Kota-- </option>
-                                </select>
-                            </span>
                         </span>
-
+                        <br>
+                        <span class="text-primary font-bold">
+                            <select id="pilihKota" onchange="jamSholat()" 
+                                class="text-center flex justify-center items-center flex-col pb-3 md:pb-2 xs:flex-row print:hidden" tabindex="0" aria-hidden="true">
+                                <option value="-1">--Kota--</option>
+                            </select>
+                        </span>
                     </p>
                 </div>
+                
                 <!-- END OF KABUPATEN KOTA SELECTOR -->
 
                 <!-- DARK MODE - PRINT - MONTH SELECTOR -->
@@ -94,7 +96,7 @@
                             <button id="btn-to-dark" class="border border-gray-500 px-2 py-1 mr-4 rounded-lg"
                                 title="Ganti Tema"><i class="fa-solid fa-sun"></i>
                             </button>
-                            <button id="btn-to-light" class="border border-gray-500 px-2 py-1 mr-4 rounded-lg"
+                            <button id="btn-print" class="border border-gray-500 px-2 py-1 mr-4 rounded-lg"
                                 title="Ganti Tema"><i class="fa-solid fa-print" onselect="printPage()"></i>
                             </button>
                         </div>
@@ -104,7 +106,8 @@
 
                 <!-- TABLE START -->
                 <div class="overflow-x-auto ">
-                    <table class="schedule-table mt-4 text-sm rounded-lg overflow-hidden print:mt-0" cellspacing="0" cellpadding="2" align="center">
+                    <table class="schedule-table mt-4 text-sm rounded-lg overflow-hidden print:mt-0" cellspacing="0"
+                        cellpadding="2" align="center">
                         <thead class="text-center bg-primary text-white">
                             <tr>
                                 <th class="rounded-bl-bg">Tanggal</th>
@@ -128,33 +131,35 @@
             </div>
 
             <!-- PARAMETER START -->
-            <div class="py-4 pt-7 px-2 sm:px-0 md:pt-20 dark:bg-dark-primary toggled" id="monthly_schedule">
-                <div class="mx-auto lg:flex lg:justify-center lg:gap-4 lg:flex-row lg:items-start">
-                    <div
-                        class="border border-gray-200 shadow rounded-lg mx-auto lg:mx-0 max-w-3xl bg-white md:px-3 py-4 relative dark:bg-dark-secondary dark:border-gray-500 print:break-after-page">
-                        <h1 class="text-center font-bold text-xl md:text-2xl text-gray-700 mx-2">
-                            PARAMETER
-                        </h1>
-                        <h2 class="text-center font-bold text-[13pt] md:text-xl">
-                            ------
-                        </h2>
-                        <!-- ISI KONTEN PARAMETER -->
-                    </div>
-                </div>
-            </div>
         </div>
         <!-- PARAMETER END -->
-
-        <!-- Kiblat Location -->
         <div class="py-4 pt-7 px-2 sm:px-0 md:pt-20 dark:bg-dark-primary toggled" id="monthly_schedule">
             <div class="mx-auto lg:flex lg:justify-center lg:gap-4 lg:flex-row lg:items-start">
                 <div
                     class="border border-gray-200 shadow rounded-lg mx-auto lg:mx-0 max-w-3xl bg-white md:px-3 py-4 relative dark:bg-dark-secondary dark:border-gray-500 print:break-after-page">
-                    <h1 class="text-center font-bold text-xl md:text-2xl text-gray-700 mx-2">
-                        Kiblat - Nek Gak Ayat Quran
-                    </h1>
-                    <h2 class="text-center font-bold text-[13pt] md:text-xl">
-                        ------
+
+
+
+
+                    <!-- Kiblat Location -->
+
+
+                    <!-- parameter start -->
+                    <h2 class="text-center font-bold text-2xl font-arab">
+                        <span id="quran"></span>
+                    </h2>
+                    <br>
+                    <h2 class="text-center font-bold text-xs font-jakarta">
+                        <span id="translate"></span>
+                    </h2>
+                    <h2 class="text-center font-bold text-xs font-jakarta">
+                        <span id="ayah"></span>
+                    </h2>
+                    <h2 class="text-center font-bold text-xs font-jakarta">
+                        <span id="ayahnum"></span>
+                    </h2>
+                    <h2 class="text-center font-bold text-xs font-jakarta">
+                        <span id="latin"></span>
                     </h2>
                     <!-- ISI KONTEN PARAMETER -->
                 </div>
