--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
                         <span class="text-primary font-bold">
                             <select id="pilihProvinsi" onchange="dropdownKota()" 
                                 class="text-center flex justify-center items-center flex-col pb-3 md:pb-2 xs:flex-row print:hidden" tabindex="0" aria-hidden="true">
-                                <option value="1">COK</option>
+                                <option value="1">PILIH PROVINSI</option>
                             </select>
                         </span>
                         <br>
