--- a/public/index.html
+++ b/public/index.html
@@ -141,25 +141,27 @@
 
 
 
-                    <!-- Kiblat Location -->
-
-
-                    <!-- parameter start -->
+                    <!-- Kiblat Location --> 
+                    <h1 class="text-center md:p-0 text-2xl font-bold font-arab">
+                        <span id="ayah"></span>
+                    </h1>
+                    <h1 class="text-center md:p-0 text-2xl font-bold font-jakarta">
+                    <span id="latin"></span> : <span id="ayahnum"></span>
+                    </h1>
+                    <h4 class="text-center md:p-2 text-xs font-semibold font-jakarta">
+                        <span id="bahasa"></span>
+                        <br>
+                    </h4>
+                    <h4 class="text-center md:p-0 text-sm font-bold font-jakarta">
+                        <span id="surah-id"></span><span id="juz"></span>
+                    </h4>
+                    <br>
                     <h2 class="text-center font-bold text-2xl font-arab">
                         <span id="quran"></span>
                     </h2>
                     <br>
                     <h2 class="text-center font-bold text-xs font-jakarta">
                         <span id="translate"></span>
-                    </h2>
-                    <h2 class="text-center font-bold text-xs font-jakarta">
-                        <span id="ayah"></span>
-                    </h2>
-                    <h2 class="text-center font-bold text-xs font-jakarta">
-                        <span id="ayahnum"></span>
-                    </h2>
-                    <h2 class="text-center font-bold text-xs font-jakarta">
-                        <span id="latin"></span>
                     </h2>
                     <!-- ISI KONTEN PARAMETER -->
                 </div>
@@ -174,8 +176,7 @@
     </div>
     </div>
 
-    <footer
-        class="text-center bg-secondary text-white py-2 px-2 font-medium text-sm md:text-base dark:text-slate-300 print:hidden">
+    <footer class="text-center bg-secondary text-white py-2 px-2 font-medium text-sm md:text-base dark:text-slate-300 print:hidden">
         <p>2024 © Made with love by collaboration <a href="https://www.linkedin.com/in/dhikiteguh/"
                 class="text-yellow-200 font-bold">Dhiki Teguh</a> x <a href="https://www.linkedin.com/in/kechenk/"
                 class="text-yellow-200 font-bold">Reza D. Pradipta</a>
