--- a/public/index.html
+++ b/public/index.html
@@ -58,13 +58,18 @@
                 <h1 class="text-center font-bold text-xl md:text-2xl text-gray-700 mx-2 dark:text-black">
                     Jadwal Sholat Untuk <span id="city1"></span>
                     <br>
+                </h1>
+                <h1 class="text-center font-bold text-sm">
                     <span id="timezone"></span>
                 </h1>
                 <h2 class="text-center font-bold text-[13pt] md:text-xl text-primary">
                     <span id="month-year1"></span>
                 </h2>
                 <h5 class="text-center mb-5 font-bold text-[7pt] md:text-[.69rem] text-slate-600 print:mb-0">
+                    <span id="hijrimonth"></span>
                     <span id="hijri"></span>
+                    <span id="hijrimonth1"></span>
+                    <span id="hijri1"></span>
                 </h5>
                 <!--KABUPATEN KOTA SELECTOR -->
                 <div class="flex justify-center items-center flex-col gap-2 pb-4 md:pb-0 xs:flex-row print:hidden">
@@ -74,7 +79,7 @@
                         <br>
                         <span class="text-primary font-bold">
                             <select id="pilihProvinsi" onchange="dropdownKota()"
-                                class="text-center flex justify-center items-center flex-col pb-3 md:pb-2 xs:flex-row print:hidden"
+                                class="text-center flex justify-center items-center flex-col pb-10 md:pb-1 xs:flex-row print:hidden"
                                 tabindex="0" aria-hidden="true">
                                 <option value="1">PILIH PROVINSI</option>
                             </select>
@@ -82,7 +87,7 @@
                     </p>
                     <span class="text-primary font-bold">
                         <select id="pilihKota" onchange="jamSholat()"
-                            class="text-center flex justify-center items-center flex-col pb-3 md:pb-2 xs:flex-row print:hidden"
+                            class="text-center flex justify-center items-center flex-col pb-10 md:pb-1 xs:flex-row print:hidden"
                             tabindex="0" aria-hidden="true">
                             <option value="-1">--Kota--</option>
                         </select>
@@ -99,7 +104,7 @@
                                 title="Ganti Tema"><i class="fa-solid fa-sun"></i>
                             </button>
                             <button id="btn-print" class="border border-gray-500 px-2 py-1 mr-4 rounded-lg"
-                                title="Ganti Tema"><i class="fa-solid fa-print" onselect="printPage()"></i>
+                                title="Ganti Tema"><i class="fa-solid fa-print" onclick="window.print()"></i>
                             </button>
                         </div>
                     </div>
@@ -113,14 +118,13 @@
                         <thead class="text-center bg-primary text-white">
                             <tr>
                                 <th class="rounded-bl-bg">Tanggal</th>
-                                <th class="hidden print:block">Hijriyah</th>
                                 <th class>Imsak</th>
                                 <th class>Subuh</th>
                                 <th class>Terbit</th>
                                 <th class>Dhuhur</th>
                                 <th class>Ashar</th>
                                 <th class>Maghrib</th>
-                                <th class>Isya</th>
+                                <th class="rounded-bl-bg">Isya</th>
                             </tr>
                         </thead>
 
