--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="2style.css">
     <script src="https://kit.fontawesome.com/dd0cf0a7f4.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="script.js?rndstr=<%= getRandomStr() %>"></script>
     <!-- <script src="sekrip.js"></script> -->
     <link rel="icon" href="../src/img/mosque-solid.svg" type="image/x-icon">
 
@@ -16,9 +16,9 @@
 
 <body class="font-jakarta">
     <!-- HEADER START -->
-    <div class="text-center text-white relative bg-cover bg-center print:hidden"
-        style="background-image: url(../src/img/masjid.jpg);">
-        <div class="bg-primary/90 py-0 md:py-4 md:pb-36">
+<div class="text-center text-white relative bg-cover bg-center print:hidden"
+     style="background-image: url(../src/img/masjid.jpg);">
+        <div class="bg-primary/90 text-center py-0 md:py-4 md:pb-36">
             <div class="font-bold pt-4">
                 <h1 class="text-2xl">Jadwal Sholat</h1>
                 <h1 class="text-3xl"><span id="city"></span></h1>
