--- a/public/test.html
+++ b/public/test.html
@@ -2,116 +2,181 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="2style.css">
-    <script src="https://kit.fontawesome.com/dd0cf0a7f4.js" crossorigin="anonymous"></script>
-    <!-- <script src="script.js"></script> -->
-    <script src="sekrip.js"></script>
-    <link rel="icon" href="../src/img/mosque-solid.svg" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="2style.css">
+  <script src="https://kit.fontawesome.com/dd0cf0a7f4.js" crossorigin="anonymous"></script>
+  <script src="script.js?rndstr=<%= getRandomStr() %>"></script>
+  <!-- <script src="sekrip.js"></script> -->
+  <link rel="icon" href="../src/img/mosque-solid.svg" type="image/x-icon">
 
-    <title>Jadwal Sholat</title>
+  <title>Jadwal Sholat</title>
 </head>
 
-<body class="font-jakarta">
-    <!-- HEADER START -->
-    <div class="text-center text-white relative bg-cover bg-center print:hidden"
-        style="background-image: url(../src/img/masjid.jpg);">
-        <div class="bg-primary/90 py-0 md:py-4 md:pb-36">
-            <div class="font-bold pt-4">
-                <h1 class="text-2xl">Jadwal Sholat</h1>
-                <h1 class="text-3xl"><span id="city"></span></h1>
-                <h1 class="text-xl"><span id="month-year"></span></h1>
-            </div>
-        </div>
+<body class="font-jakarta sm:hidden">
+  <!-- HEADER START -->
+  <div class="text-center text-white relative bg-cover bg-center print:hidden"
+    style="background-image: url(../src/img/masjid.jpg);">
+    <div class="bg-primary/90 text-center py-0 md:py-4 md:pb-36">
+      <div class="font-bold pt-4">
+        <h1 class="text-2xl">Jadwal Sholat</h1>
+        <h1 class="text-3xl"><span id="city"></span></h1>
+        <h1 class="text-xl"><span id="month-year"></span></h1>
+      </div>
     </div>
-    <!-- HEADER END -->
+    <div
+      class="bg-white md:absolute max-w-6xl pb-4 md:rounded-lg left-0 right-0 top-52 m-auto shadow-md praytime_next_item dark:bg-dark-primary dark:shadow-gray-800"
+      id="daily_schedule" style="display: none;">
+      <div
+        class="bg-[#0d763f] flex md:max-w-[45%] lg:max-w-[30%] mx-auto justify-center items-center gap-6 py-4 md:rounded-lg relative md:mt-[-1.5rem] mb-3">
+        <div class="flex items-center gap-4 justify-between px-5 xs:px-12 overflow-x-auto">
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <!-- BORDER START -->
-    <div class="py-4 pt-7 px-2 sm:px-0 md:pt-20 dark:bg-dark-primary toggled" id="monthly_schedule">
-        <div class="mx-auto lg:flex lg:justify-center lg:gap-4 lg:flex-row lg:items-start">
-            <div
-                class="border border-gray-200 shadow rounded-lg mx-auto lg:mx-0 max-w-3xl bg-white md:px-3 py-4 relative dark:bg-dark-secondary dark:border-gray-500 print:break-after-page">
-                <h1 class="text-center font-bold text-xl md:text-2xl text-gray-700 mx-2 dark:text-black">
-                    Jadwal Sholat Untuk <span id="city1"></span>
-                </h1>
-                <h2 class="text-center font-bold text-[13pt] md:text-xl text-primary">
-                    <span id="month-year1"></span>
-                </h2>
-                <h5 class="text-center mb-5 font-bold text-[7pt] md:text-[.69rem] text-slate-600 print:mb-0">
-                    <span id="hijri"></span>
-                </h5>
-                <!--KABUPATEN KOTA SELECTOR -->
-                <div class="flex justify-center items-center flex-col gap-2 pb-4 md:pb-0 xs:flex-row print:hidden">
-                    <p class="text-base font-medium m-0 md:text-[1.1rem] dark:text-dark">
-                        <i class="fa-solid fa-location-dot"></i>
-                        Pilih Kab/Kota untuk Ditampilkan
-                        <br>
-                        <span class="text-primary font-bold">
-                            <select id="pilihProvinsi" onchange="dropdownKota()"
-                                class="text-center flex justify-center items-center flex-col pb-3 md:pb-2 xs:flex-row print:hidden"
-                                tabindex="0" aria-hidden="true">
-                                <option value="1">PILIH PROVINSI</option>
-                            </select>
-                        </span>
-                    </p>
-                    <span class="text-primary font-bold">
-                        <select id="pilihKota" onchange="jamSholat()"
-                            class="text-center flex justify-center items-center flex-col pb-3 md:pb-2 xs:flex-row print:hidden"
-                            tabindex="0" aria-hidden="true">
-                            <option value="-1">--Kota--</option>
-                        </select>
-                    </span>
-                </div>
+  <!-- HEADER END -->
 
-                <!-- TABLE START -->
-                <div class="overflow-x-auto ">
-                    <table class="schedule-table mt-4 text-sm rounded-lg overflow-hidden print:mt-0" cellspacing="0"
-                        cellpadding="2" align="center">
-                        <thead class="text-center bg-primary text-white">
-                            <tr>
-                                <th class="rounded-bl-bg">Tanggal</th>
-                                <th class="hidden print:block">Hijriyah</th>
-                                <th class>Imsak</th>
-                                <th class>Subuh</th>
-                                <th class>Terbit</th>
-                                <th class>Dhuhur</th>
-                                <th class>Ashar</th>
-                                <th class>Maghrib</th>
-                                <th class>Isya</th>
-                            </tr>
-                        </thead>
+  <!-- BORDER START -->
+  <div class="py-4 pt-7 px-2 sm:px-0 md:pt-20 dark:bg-dark-primary toggled" id="monthly_schedule">
+    <div class="mx-auto lg:flex lg:justify-center lg:gap-4 lg:flex-row lg:items-start">
+      <div
+        class="border border-gray-200 shadow rounded-lg mx-auto lg:mx-0 max-w-3xl bg-white md:px-3 py-4 relative dark:bg-dark-secondary dark:border-gray-500 print:break-after-page">
+        <h1 class="text-center font-bold text-xl md:text-2xl text-gray-700 mx-2 dark:text-black">
+          Jadwal Sholat Untuk <span id="city1"></span>
+          <br>
+        </h1>
+        <h1 class="text-center font-bold text-sm">
+          <span id="timezone"></span>
+        </h1>
+        <h2 class="text-center font-bold text-[13pt] md:text-xl text-primary">
+          <span id="month-year1"></span>
+        </h2>
+        <h5 class="text-center mb-5 font-bold text-[7pt] md:text-[.69rem] text-slate-600 print:mb-0">
+          <span id="hijrimonth"></span>
+          <span id="hijri"></span>
+          <span id="hijrimonth1"></span>
+          <span id="hijri1"></span>
+        </h5>
+        <!--KABUPATEN KOTA SELECTOR -->
+        <div class="flex justify-center items-center flex-col gap-2 pb-4 md:pb-0 xs:flex-row print:hidden">
+          <p class="text-base font-medium m-0 md:text-[1.1rem] dark:text-dark">
+            <i class="fa-solid fa-location-dot"></i>
+            Pilih Kab/Kota untuk Ditampilkan
+            <br>
+            <span class="text-primary font-bold">
+              <select id="pilihProvinsi" onchange="dropdownKota()"
+                class="text-center flex justify-center items-center flex-col pb-10 md:pb-1 xs:flex-row print:hidden"
+                tabindex="0" aria-hidden="true">
+                <option value="1">PILIH PROVINSI</option>
+              </select>
+            </span>
+          </p>
+          <span class="text-primary font-bold">
+            <select id="pilihKota" onchange="jamSholat()"
+              class="text-center flex justify-center items-center flex-col pb-10 md:pb-1 xs:flex-row print:hidden"
+              tabindex="0" aria-hidden="true">
+              <option value="-1">--Kota--</option>
+            </select>
+          </span>
+        </div>
 
-                        <tbody class="data_sholat1 text-center font-jakarta">
-                            <tr class="data_sholat table_dark table_light table_highlight
+        <!-- END OF KABUPATEN KOTA SELECTOR -->
+
+        <!-- DARK MODE - PRINT - MONTH SELECTOR -->
+        <div class="text-center mx-auto mt-4 px-5 md:mt-7 md:px-0 print:hidden">
+          <div class="flex justify-between mt-6 sm:mt-0">
+            <div class="flex gap-2">
+              <button id="btn-to-dark" class="border border-gray-500 px-2 py-1 mr-4 rounded-lg" title="Ganti Tema"><i
+                  class="fa-solid fa-sun"></i>
+              </button>
+              <button id="btn-print" class="border border-gray-500 px-2 py-1 mr-4 rounded-lg" title="Ganti Tema"><i
+                  class="fa-solid fa-print" onclick="window.print()"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- END OF DARK MODE - PRINT - MONTH SELECTOR -->
+
+        <!-- TABLE START -->
+        <div class="overflow-x-auto ">
+          <table class="schedule-table mt-4 text-sm rounded-lg overflow-hidden print:mt-0" cellspacing="0"
+            cellpadding="2" align="center">
+            <thead class="text-center bg-primary text-white">
+              <tr>
+                <th class="rounded-bl-bg">Tanggal</th>
+                <th class>Imsak</th>
+                <th class>Subuh</th>
+                <th class>Terbit</th>
+                <th class>Dhuhur</th>
+                <th class>Ashar</th>
+                <th class>Maghrib</th>
+                <th class="rounded-bl-bg">Isya</th>
+              </tr>
+            </thead>
+
+            <tbody class="data_sholat1 text-center font-jakarta">
+              <tr class="data_sholat table_dark table_light table_highlight
                             table_header" align="center"></tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+            </tbody>
+          </table>
         </div>
+      </div>
+
+      <!-- PARAMETER START -->
     </div>
+    <!-- PARAMETER END -->
+    <div class="py-4 pt-7 px-2 sm:px-0 md:pt-20 dark:bg-dark-primary toggled" id="monthly_schedule">
+      <div class="mx-auto lg:flex lg:justify-center lg:gap-4 lg:flex-row lg:items-start">
+        <div
+          class="border border-gray-200 shadow rounded-lg mx-auto lg:mx-0 max-w-3xl bg-white md:px-3 py-4 relative dark:bg-dark-secondary dark:border-gray-500 print:break-after-page">
 
-    <footer
-        class="text-center bg-secondary text-white py-2 px-2 font-medium text-sm md:text-base dark:text-slate-300 print:hidden">
-        <p>2024 © Made with love by collaboration <a href="https://www.linkedin.com/in/dhikiteguh/"
-                class="text-yellow-200 font-bold">Dhiki Teguh</a> x <a href="https://www.linkedin.com/in/kechenk/"
-                class="text-yellow-200 font-bold">Reza D. Pradipta</a>
-    </footer>
 
-    <script>
-        // Your JavaScript code goes here...
 
-        // Define the ID of Surabaya
-        const surabayaId = "3578"; // You can adjust this if needed
 
-        // Set the value of the city dropdown to Surabaya's ID
-        document.getElementById("pilihKota").value = surabayaId;
+          <!-- Kiblat Location -->
+          <h1 class="text-center md:p-0 text-2xl font-bold font-arab">
+            <span id="ayah"></span>
+          </h1>
+          <h1 class="text-center md:p-0 text-2xl font-bold font-jakarta">
+            <span id="latin"></span> : <span id="ayahnum"></span>
+          </h1>
+          <h4 class="text-center md:p-2 text-xs font-semibold font-jakarta">
+            <span id="bahasa"></span>
+            <br>
+          </h4>
+          <h4 class="text-center md:p-0 text-sm font-bold font-jakarta">
+            <span id="surah-id"></span><span id="juz"></span>
+          </h4>
+          <br>
+          <h2 class="text-center font-bold text-2xl font-arab">
+            <span id="quran"></span>
+          </h2>
+          <br>
+          <h2 class="text-center font-bold text-xs font-jakarta">
+            <span id="translate"></span>
+          </h2>
+          <!-- ISI KONTEN PARAMETER -->
+        </div>
+      </div>
+    </div>
+  </div>
 
-        // Call the jamSholat() function to fetch prayer times for Surabaya
-        jamSholat();
-    </script>
+
+
+  </div>
+
+  </div>
+  </div>
+
+  <footer
+    class="text-center bg-secondary text-white py-2 px-2 font-medium text-sm md:text-base dark:text-slate-300 print:hidden">
+    <p>2024 © Made with love by collaboration <a href="https://www.linkedin.com/in/dhikiteguh/"
+        class="text-yellow-200 font-bold">Dhiki Teguh</a> x <a href="https://www.linkedin.com/in/kechenk/"
+        class="text-yellow-200 font-bold">Reza D. Pradipta</a>
+  </footer>
+
 </body>
 
 </html>
